tests/expectations/compiler/futures/async_before_call_fail.out
Error [ETYC0372102]: External transition calls cannot be made after local async function call
    --> compiler-test:8:9
     |
   8 |         child.aleo/t();
     |         ^^^^^^^^^^^^^^
     |
     = Move the async function call before the transition call.
